--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,17 +3,17 @@
   "name": "StickyDo - check todo list app",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "asset/favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
+      "src": "asset/logo_S.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "logo512.png",
+      "src": "asset/logo512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
